--- a/backend/myapp/templates/query.html
+++ b/backend/myapp/templates/query.html
@@ -122,7 +122,7 @@
             </div>
             <div class="buttons">
                 <button class="btn" onclick="previousQuestion(5)">Previous</button>
-                <button class="btn" onclick="submitForm()">Submit</button>
+                <button class="btn submit" onclick="submitForm()">Submit</button>
             </div>
         </div>
     </div>
@@ -132,6 +132,7 @@
             🎉
         </div>
         <h1 class="thank-you-title">Thank You!</h1>
+        <a href="{% url 'index' %}"><button >Go to Home</button></a>
         <p>Your submission has been received. We appreciate your feedback!</p>
     </div>
 
